# openCV3_demo

./: .gitignore
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/rokid/dchen23/opencv3_demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: gray-process.cpp
app/src/main/java/com/rokid/dchen23/opencv3_demo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/rokid/dchen23/opencv3_demo/: ExampleUnitTest.java
